Fix button text issue on safari and add styles for modal

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -101,6 +101,7 @@ button.button {
   align-items: center;
   justify-content: center;
   background-color: #f8deff;
+  color: #000;
   border: 2px solid #000;
   border-radius: 5px;
   box-shadow: 3px 3px 1px #000;
@@ -539,4 +540,46 @@ Delete Goal
   .goal {
     height: 280px;
   }
+}
+
+/*********************************************************************
+Modal
+*********************************************************************/
+
+.modal-outer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal-outer.open {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.modal-inner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 5px;
+  background-color: #fff;
+  padding: 2em;
+  width: 90%;
+  max-width: 500px;
+}
+
+.modal-inner p {
+  font-size: 1rem;
+}
+
+button.submit-modal {
+  max-width: 16ch;
 }
